# KineticLake

./: CI_CD_SETUP.md  QUICK_START.md  README.md  _config.yml  databricks.yml  pyproject.toml
.github/workflows/: README.md  cd.yml  ci.yml  test-pr.yml
resources/: bronze_layer.pipeline.yml  gold_layer.pipeline.yml  silver_layer.pipeline.yml  whole_workflow.job.yml
src/bronze/transformations/: Bronze_Layer.py
src/gold/transformations/: actual_path vs estimated_path.py  gold_aggregations.py
src/silver/transformations/:  silver_imu.py  silver_encoder.py  silver_gps.py
tests/integration/: README.md  __init__.py  test_bronze_layer_spark.py  test_gold_layer_spark.py  test_silver_layer_spark.py
tests/unit/: __init__.py  test_actual_path_vs_estimated_path.py  test_bronze_layer.py  test_gold_aggregations.py  test_silver_encoder.py  test_silver_gps.py  test_silver_imu.py
